Interim check-in: BootstrapUI -> HTML5Template; started the process of removing Bootstrap-specific mark-up from templates.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@3988 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/src/main/resources/templates/forvm/ChangePasswordForm.html
+++ b/src/main/resources/templates/forvm/ChangePasswordForm.html
@@ -8,29 +8,24 @@
         <input type="email"
                th:id="${#ids.seq('username')}"
                th:value="${#authentication.getPrincipal().getUsername()}"
-               class="form-control" readonly="readonly"/>
+               readonly="readonly"/>
         <input type="hidden" th:name="username"
                th:value="${#authentication.getPrincipal().getUsername()}"/>
-        <label class="sr-only"
-               th:for="${#ids.prev('username')}"
+        <label th:for="${#ids.prev('username')}"
                th:text="'E\'mail Address'"/>
         <input type="password" th:name="password"
                th:id="${#ids.seq('password')}" th:placeholder="'Old Password'"
-               class="form-control" required autofocus/>
-        <label class="sr-only"
-               th:for="${#ids.prev('password')}" th:text="'Old Password'"/>
+               required autofocus/>
+        <label th:for="${#ids.prev('password')}" th:text="'Old Password'"/>
         <input type="password" th:name="newPassword"
                th:id="${#ids.seq('password')}" th:placeholder="'New Password'"
-               class="form-control" required autofocus/>
-        <label class="sr-only"
-               th:for="${#ids.prev('password')}" th:text="'New Password'"/>
+               required autofocus/>
+        <label th:for="${#ids.prev('password')}" th:text="'New Password'"/>
         <input type="password" th:name="repeatPassword"
                th:id="${#ids.seq('password')}" th:placeholder="'Repeat Password'"
-               class="form-control" required autofocus/>
-        <label class="sr-only"
-               th:for="${#ids.prev('password')}" th:text="'Repeat Password'"/>
-        <button class="btn btn-lg btn-primary btn-block"
-                type="submit" th:text="Change"/>
+               required autofocus/>
+        <label th:for="${#ids.prev('password')}" th:text="'Repeat Password'"/>
+        <button type="submit" th:text="Change"/>
       </form>
     </div>
   </div>
