--- a/src/main/resources/templates/forvm/menu.html
+++ b/src/main/resources/templates/forvm/menu.html
@@ -1,15 +1,17 @@
 <!--/* $Id$ */-->
-<ul class="navbar-nav">
+<ul>
   <li sec:authorize="hasAuthority('AUTHOR')"
       class="nav-item dropdown">
     <a class="nav-link dropdown-toggle" data-toggle="dropdown"
        aria-haspopup="true" aria-expanded="false"
        th:id="${#ids.seq('dropdown')}"
        href="#" th:text="'Author'"/>
-    <div class="dropdown-menu"
-         th:attr="aria-labelledby=${#ids.prev('dropdown')}">
-      <a class="dropdown-item" th:href="@{/preview/}" th:text="'Preview'"/>
-    </div>
+    <ul class="dropdown-menu"
+        th:attr="aria-labelledby=${#ids.prev('dropdown')}">
+      <li>
+        <a class="dropdown-item" th:href="@{/preview/}" th:text="'Preview'"/>
+      </li>
+    </ul>
   </li>
   <li sec:authorize="hasAuthority('SUBSCRIBER')"
       class="nav-item dropdown">
@@ -18,19 +20,21 @@
        th:classappend="'disabled'"
        th:id="${#ids.seq('dropdown')}"
        href="#" th:text="'Subscriber'"/>
-    <div class="dropdown-menu"
-         th:attr="aria-labelledby=${#ids.prev('dropdown')}">
-    </div>
+    <ul class="dropdown-menu"
+        th:attr="aria-labelledby=${#ids.prev('dropdown')}">
+    </ul>
   </li>
   <li class="nav-item dropdown">
     <a class="nav-link dropdown-toggle" data-toggle="dropdown"
        aria-haspopup="true" aria-expanded="false"
        th:id="${#ids.seq('dropdown')}"
        href="#" th:text="'Collections'"/>
-    <div class="dropdown-menu"
-         th:attr="aria-labelledby=${#ids.prev('dropdown')}">
-      <a class="dropdown-item" th:href="@{/authors/}" th:text="'Authors'"/>
-    </div>
+    <ul class="dropdown-menu"
+        th:attr="aria-labelledby=${#ids.prev('dropdown')}">
+      <li>
+        <a class="dropdown-item" th:href="@{/authors/}" th:text="'Authors'"/>
+      </li>
+    </ul>
   </li>
   <li sec:authorize="!isAuthenticated()" class="nav-item">
     <a class="nav-link" th:href="@{/login}" th:text="'Login'"/>
@@ -40,10 +44,14 @@
        aria-haspopup="true" aria-expanded="false"
        th:id="${#ids.seq('dropdown')}"
        href="#" th:text="'Account'"/>
-    <div class="dropdown-menu"
-         th:attr="aria-labelledby=${#ids.prev('dropdown')}">
-      <a class="dropdown-item" th:href="@{/password}" th:text="'Change Password'"/>
-      <a class="dropdown-item" th:href="@{/logout}" th:text="'Logout'"/>
-    </div>
+    <ul class="dropdown-menu"
+        th:attr="aria-labelledby=${#ids.prev('dropdown')}">
+      <li>
+        <a class="dropdown-item" th:href="@{/password}" th:text="'Change Password'"/>
+      </li>
+      <li>
+        <a class="dropdown-item" th:href="@{/logout}" th:text="'Logout'"/>
+      </li>
+    </ul>
   </li>
 </ul>
