Interim check-in: BootstrapUI -> HTML5Template; continued the process of removing Bootstrap-specific mark-up from templates.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@3994 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/src/main/resources/templates/forvm/PreviewForm.html
+++ b/src/main/resources/templates/forvm/PreviewForm.html
@@ -1,7 +1,7 @@
 <!--/* $Id$ */-->
-<div class="jumbotron">
-  <div class="row justify-content-center">
-    <div class="col-sm-6">
+<div>
+  <div>
+    <div>
       <form th:action="${#request.servletPath}" th:method="'post'"
             th:enctype="'multipart/form-data'">
         <th:block if="${_csrf != null}">
