--- a/src/main/resources/templates/forvm/ChangePasswordForm.html
+++ b/src/main/resources/templates/forvm/ChangePasswordForm.html
@@ -1,8 +1,8 @@
 <!--/* $Id$ */-->
-<div class="jumbotron">
-  <div class="row justify-content-center">
-    <div class="col-sm-6">
-      <form class="form-signin" th:action="@{''}" method="post">
+<div>
+  <div>
+    <div>
+      <form th:action="@{''}" method="post">
         <input type="hidden"
                th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
         <input type="email"
