"nav" -> "header > nav"
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@3997 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/src/main/sass/static/css/style.scss
+++ b/src/main/sass/static/css/style.scss
@@ -30,8 +30,8 @@ body {
 header > nav { @extend .navbar-expand-md, .container; }
 header > nav > a:first-child { @extend .navbar-brand; }
 header > nav > ul { @extend .navbar-nav; }
-nav > ul > li { @extend .nav-item; }
-nav > ul > li > a { @extend .nav-link; }
+header > nav > ul > li { @extend .nav-item; }
+header > nav > ul > li > a { @extend .nav-link; }
 /*
  * HTML5Template/body/main.html
  */
