Re-factored HTML5Template to provide *only* semantic HTML5.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@3998 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/src/main/resources/templates/forvm.html
+++ b/src/main/resources/templates/forvm.html
@@ -1,6 +1,6 @@
 <!--/* $Id$ */-->
 <th:block th:if="${form != null}">
-  <th:block th:insert="~{${template + '/' + form.class.simpleName}}"/>
+  <th:block th:insert="~{${#execInfo.templateName + '/' + form.class.simpleName}}"/>
 </th:block>
 <th:block th:if="${#ctx.containsVariable('articles')}">
   <table>
