--- a/src/main/sass/static/css/style.scss
+++ b/src/main/sass/static/css/style.scss
@@ -24,29 +24,29 @@ body {
   }
 }
 /*
- * HTML5Template/body/header.html
- * forvm/menu.html
+ * HTML5Template
  */
 header > nav { @extend .navbar-expand-md, .container; }
 header > nav > a:first-child { @extend .navbar-brand; }
 header > nav > ul { @extend .navbar-nav; }
 header > nav > ul > li { @extend .nav-item; }
 header > nav > ul > li > a { @extend .nav-link; }
-/*
- * HTML5Template/body/main.html
- */
+
 main { @extend .container; }
+main > div { @extend .jumbotron; }
+main > div > section { @extend .text-center; }
+
+footer { @extend .fixed-bottom, .bg-dark, .text-white; }
+footer > nav { @extend .navbar, .navbar-dark, .container; }
+footer > nav > span:first-child { @extend .col-sm, .text-left; }
+footer > nav > span:nth-child(2) { @extend .col-sm-3; }
+footer > nav > span:last-child { @extend .col-sm, .text-right; }
+footer > nav > span > a { @extend .btn, .btn-link; }
 /*
- * forvm/main.html
+ * forvm.html
  */
 main > table { @extend .table, .table-striped; }
 main > table > tbody > tr { @extend .row; }
-/*
- * HTML5Template/body/main/exception.html
- * HTML5Template/body/main/error.html
- */
-main > div { @extend .jumbotron; }
-main > div > section { @extend .text-center; }
 /*
  * forvm/*Form.html
  */
@@ -56,12 +56,3 @@ form > input[type=file] { @extend .form-control-file; }
 form > input { @extend .form-control; }
 form > label { @extend .sr-only; }
 form > button { @extend .btn, .btn-lg, .btn-primary, .btn-block; }
-/*
- * HTML5Template/body/footer.html
- */
-footer { @extend .fixed-bottom, .bg-dark, .text-white; }
-footer > nav { @extend .navbar, .navbar-dark, .container; }
-footer > nav > span:first-child { @extend .col-sm, .text-left; }
-footer > nav > span:nth-child(2) { @extend .col-sm-3; }
-footer > nav > span:last-child { @extend .col-sm, .text-right; }
-footer > nav > span > a { @extend .btn, .btn-link; }
