Use [(${...})] to include raw HTML.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@4018 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/src/main/resources/templates/forvm.html
+++ b/src/main/resources/templates/forvm.html
@@ -18,7 +18,7 @@
 </th:block>
 <th:block th:if="${#ctx.containsVariable('article')}">
   <article>
-    <div th:remove="tag" th:utext="${article.html}"/>
+    [(${article.html})]
   </article>
 </th:block>
 <th:block th:if="${#ctx.containsVariable('authors')}">
@@ -30,7 +30,7 @@
              th:text="${author.name ?: author.slug}"/>
         </td>
         <td class="col-sm">
-          <div th:remove="tag" th:utext="${author.html}"/>
+          [(${author.html})]
         </td>
       </tr>
     </tbody>
