--- a/jar/src/main/resources/templates/forvm.html
+++ b/jar/src/main/resources/templates/forvm.html
@@ -1,5 +1,5 @@
 <!--/* $Id$ */-->
-<th:block th:if="${form != null}">
+<th:block th:if="${#ctx.containsVariable('form')}">
   <th:block th:insert="~{${#execInfo.templateName + '/' + form.class.simpleName}}"/>
 </th:block>
 <th:block th:if="${#ctx.containsVariable('articles')}">
@@ -7,9 +7,11 @@
     <tbody>
       <tr th:each="article : ${articles}">
         <td class="col-sm">
-          <a class="row h1" th:href="@{/article/{slug}/(slug=${article.slug})}"
-             th:text="${article.title}"/>
-          <a class="row" th:href="@{/articles/(author=${article.author.slug})}"
+          <a class="row" th:href="@{/article/{slug}/(slug=${article.slug})}">
+            <h1 th:text="${article.title}"/>
+          </a>
+          <a class="row"
+             th:href="@{/articles/(author=${article.author.slug})}"
              th:text="${article.author.name}"/>
         </td>
       </tr>
@@ -26,8 +28,8 @@
     <tbody>
       <tr th:each="author : ${authors}">
         <td class="col-sm-2 text-left">
-          <a th:href="@{/articles/(author=${author.slug})}"
-             th:text="${author.name ?: author.slug}"/>
+          <a th:text="${author.name ?: author.slug}"
+             th:href="@{/articles/(author=${author.slug})}"/>
         </td>
         <td class="col-sm">
           [(${author.html})]
