Added Thymeleaf decoupled logic to forms.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@4052 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/jar/src/main/resources/templates/forvm/ChangePasswordForm.html
+++ b/jar/src/main/resources/templates/forvm/ChangePasswordForm.html
@@ -2,29 +2,22 @@
 <div>
   <div>
     <div>
-      <form th:action="@{''}" method="post">
-        <input type="hidden"
-               th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+      <form>
         <input type="email"
-               th:id="${#ids.seq('username')}"
                th:value="${#authentication.getPrincipal().getUsername()}"
                readonly="readonly"/>
         <input type="hidden" th:name="username"
                th:value="${#authentication.getPrincipal().getUsername()}"/>
-        <label th:for="${#ids.prev('username')}"
-               th:text="'E\'mail Address'"/>
+        <label th:text="'E\'mail Address'"/>
         <input type="password" th:name="password"
-               th:id="${#ids.seq('password')}" th:placeholder="'Old Password'"
-               required autofocus/>
-        <label th:for="${#ids.prev('password')}" th:text="'Old Password'"/>
+               th:placeholder="'Old Password'"/>
+        <label th:text="'Old Password'"/>
         <input type="password" th:name="newPassword"
-               th:id="${#ids.seq('password')}" th:placeholder="'New Password'"
-               required autofocus/>
-        <label th:for="${#ids.prev('password')}" th:text="'New Password'"/>
+               th:placeholder="'New Password'"/>
+        <label th:text="'New Password'"/>
         <input type="password" th:name="repeatPassword"
-               th:id="${#ids.seq('password')}" th:placeholder="'Repeat Password'"
-               required autofocus/>
-        <label th:for="${#ids.prev('password')}" th:text="'Repeat Password'"/>
+               th:placeholder="'Repeat Password'"/>
+        <label th:text="'Repeat Password'"/>
         <button type="submit" th:text="Change"/>
       </form>
     </div>
