--- a/jar/src/main/resources/templates/forvm/LoginForm.html
+++ b/jar/src/main/resources/templates/forvm/LoginForm.html
@@ -2,18 +2,13 @@
 <div>
   <div>
     <div>
-      <form th:action="@{''}" method="post">
-        <input type="hidden"
-               th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+      <form>
         <input type="email" th:name="username"
-               th:id="${#ids.seq('username')}"
-               th:placeholder="'E\'mail Address'"
-               required autofocus/>
-        <label th:for="${#ids.prev('username')}" th:text="'E\'mail Address'"/>
+               th:placeholder="'E\'mail Address'"/>
+        <label th:text="'E\'mail Address'"/>
         <input type="password" th:name="password"
-               th:id="${#ids.seq('password')}" th:placeholder="'Password'"
-               required autofocus/>
-        <label th:for="${#ids.prev('password')}" th:text="'Password'"/>
+               th:placeholder="'Password'"/>
+        <label th:text="'Password'"/>
         <button type="submit" th:text="'Login'"/>
       </form>
     </div>
