--- a/jar/src/main/resources/templates/forvm/LoginForm.html
+++ b/jar/src/main/resources/templates/forvm/LoginForm.html
@@ -13,8 +13,8 @@
       </form>
     </div>
   </div>
-  <div class="row justify-content-center">
-    <div class="col-sm-6">
+  <div>
+    <div>
       <p th:if="${param.error}">Invalid username and password.</p>
       <p th:if="${param.logout}">You have been logged out.</p>
     </div>
