--- a/jar/src/main/resources/templates/forvm.th.xml
+++ b/jar/src/main/resources/templates/forvm.th.xml
@@ -2,24 +2,22 @@
 <!-- $Id$ -->
 <thlogic>
   <attr sel="body">
-    <attr sel="/header" th:class="'navbar navbar-dark fixed-top'">
-      <attr sel="/nav" th:class="'navbar-expand-md container'">
-        <attr sel="/a[0]" th:class="'navbar-brand'"/>
-        <attr sel="/ul" th:class="'navbar-nav'">
-          <attr sel="/li" th:class="'nav-item dropdown'">
-            <attr sel="/a" th:class="'nav-link'"/>
-            <attr sel="/button" th:class="'btn dropdown-toggle'"
-                  th:id="${#ids.seq('dropdown')}" th:data-toggle="'dropdown'"
-                  th:aria-haspopup="true" th:aria-expanded="false"/>
-            <attr sel="/ul" th:class="'dropdown-menu'"
-                  th:aria-labelledby="${#ids.prev('dropdown')}">
-              <attr sel="/li" th:class="'nav-item'">
-                <attr sel="/a" th:class="'dropdown-item'"/>
-              </attr>
-            </attr>
-          </attr>
-        </attr>
-      </attr>
+    <attr sel="/header" th:class="'fixed-top navbar navbar-dark'">
+      <attr sel="/nav" th:class="'container navbar-expand-md'"/>
+      <attr sel="nav/a[0]" th:class="'navbar-brand'"/>
+      <attr sel="nav/ul" th:class="'navbar-nav'"/>
+      <attr sel="nav/ul/li" th:class="'navbar-item dropdown'"/>
+      <attr sel="nav/ul/li/a" th:class="'btn btn-link'"/>
+      <attr sel="nav//ul/li/button"
+            th:class="'btn dropdown-toggle'"
+            th:id="${#ids.seq('dropdown')}"
+            th:data-toggle="'dropdown'"
+            th:aria-haspopup="true" th:aria-expanded="false"/>
+      <attr sel="nav//ul/li/ul"
+            th:class="'dropdown-menu'"
+            th:aria-labelledby="${#ids.prev('dropdown')}"/>
+      <attr sel="nav//ul/li/ul/li" th:class="'nav-item dropdown'"/>
+      <attr sel="nav//ul/li/ul/li/a" th:class="'btn btn-link dropdown-item'"/>
     </attr>
     <attr sel="main" th:class="'container'">
       <attr sel="/div" th:class="'jumbotron'">
@@ -41,14 +39,12 @@
       </attr>
     </attr>
     <attr sel="/footer" th:class="'fixed-bottom'">
-      <attr sel="/nav" th:class="'navbar navbar-dark container'">
+      <attr sel="/nav" th:class="'container navbar navbar-dark'">
         <attr sel="/span[0]" th:class="'col-sm text-left'"/>
-        <attr sel="/span[1]" th:class="'col-sm-3'"/>
+        <attr sel="/span[1]" th:class="'col-sm-3 text-center'"/>
         <attr sel="/span[2]" th:class="'col-sm text-right'"/>
-        <attr sel="/span">
-          <attr sel="/a" th:class="'btn btn-link'"/>
-        </attr>
       </attr>
+      <attr sel="nav//a" th:class="'btn btn-link'"/>
     </attr>
   </attr>
 </thlogic>
