Added th:object="${form}" to <form/>.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/forvm/trunk@4065 b3e4a033-f9ea-474d-ac63-5dcbede9114a

--- a/jar/src/main/resources/templates/forvm/ChangePasswordForm.html
+++ b/jar/src/main/resources/templates/forvm/ChangePasswordForm.html
@@ -2,7 +2,7 @@
 <div>
   <div>
     <div>
-      <form>
+      <form th:object="${form}">
         <input type="email"
                th:value="${#authentication.getPrincipal().getUsername()}"
                readonly="readonly"/>
