--- a/jar/src/main/resources/templates/forvm/LoginForm.html
+++ b/jar/src/main/resources/templates/forvm/LoginForm.html
@@ -2,7 +2,7 @@
 <div>
   <div>
     <div>
-      <form>
+      <form th:object="${form}">
         <input type="email" th:name="username"
                th:placeholder="'E\'mail Address'"/>
         <label th:text="'E\'mail Address'"/>
